--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "**/node_modules": true,
     "**/bower_components": true,
     "**/.sfdx": true
-  }
+  },
+  "salesforcedx-vscode-apex.java.home": "C:\\\\Program Files\\\\Java\\\\jdk-17",
+  "salesforcedx-vscode-apex.enable-semantic-errors": true
 }
